# OpenGl_Test

./: .gitignore  Application.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  OpenGL  README.md  build  build.sh  cmake_install.cmake  compile_commands.json
.cache/clangd/index/: Application.cpp.37C685BB09E3AF96.idx  IndexBuffer.cpp.BC512CE77D110A73.idx  IndexBuffer.hpp.3029E1DDC4CE452B.idx  Renderer.cpp.E9744E25D091AEE6.idx  Renderer.hpp.3102FC6662DEDB86.idx  Shader.hpp.57522021AEA10868.idx  Texture.hpp.00DCC7BD8457611B.idx  VertexArray.cpp.7B95321C466DCEFC.idx  VertexArray.hpp.8E60446D720441B9.idx  VertexBuffer.cpp.13F5F9E50B0280AE.idx  VertexBuffer.hpp.2580BB0F9F05F0EE.idx  VertexBufferLayout.hpp.226B63DB6B7A2A2D.idx
include/: IndexBuffer.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
lib/: stb_image.h
lib/imgui/: imgui_impl_opengl3.cpp
ressources/shaders/: basic.vert
src/: IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
tests/: TestClearColor.cpp  TestClearColor.h  test.cpp  test.h
tests/ClearColor/: TestClearColor.cpp  TestClearColor.h
tests/Texture/: TestTexture.cpp  TestTexture.h
